src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>About_Warehouse__c</fullName>
        <inlineHelpText>Please give the information about your warehouse</inlineHelpText>
        <label>About Warehouse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Designation__c</fullName>
        <inlineHelpText>Enter your designation</inlineHelpText>
        <label>Contact Person Designation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Incorporation_of_the_Company__c</fullName>
        <label>Year of Incorporation of the Company</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Your_company_current_primary_business__c</fullName>
        <label>Your company current primary business</label>
        <type>TextArea</type>
    </fields>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <description>This is for accessing lead record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <recordTypes>
        <fullName>Parter_Lead</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <label>Parter Lead</label>
    </recordTypes>
</CustomObject>